-Creating a JDBC Starter Project,  Setting up the H2 Database,  SELECT Query,  INSERT Query,  UPDATE Query,  DELETE Query,  DDL Queries

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.6'
 	implementation 'org.springframework.data:spring-data-rest-hal-browser:3.3.9.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.h2database:h2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
