--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #logging.level.org.springframework = DEBUG
 #Management.server.port = 8081
 management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
